Fix flickering with pivot mouse over

--- a/Tesserae/h5/assets/css/tss.pivot.css
+++ b/Tesserae/h5/assets/css/tss.pivot.css
@@ -79,4 +79,5 @@
     flex-grow: 0;
     background: var(--tss-primary-background-color);
     overflow: hidden;
+    pointer-events:none;
 }
